--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.ReactModal__Overlay {
+  z-index: 2050;
+}
+.linear-bg {
+  background: linear-gradient(to top, #000000 -10%, transparent 100%);
+}
